# mini3d-rs

./: Cargo.toml  README.md
src/: calc.rs  device.rs  main.rs  matrix_calc.rs  transform_calc.rs  vector_calc.rs  vertex.rs
